--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin: 1px;
+    padding: 1px;
 }
 .row{
     padding-left: 25px;
@@ -69,7 +69,7 @@ body{
 #email{
     border: none;
     border-radius: 20px;
-    padding: 8px;
+    padding: 8px 0px;
     margin-top: 20px;
     margin-bottom: 6px; 
     background-color: rgb(219, 226, 224);   
@@ -78,4 +78,5 @@ body{
 .col-md-3 h4{
     color: rgb(34, 12, 56);
 }
+
 
