copyright portion padding added and done finally

--- a/style.css
+++ b/style.css
@@ -87,8 +87,9 @@ body{
 }
 
 #copyright{
-    margin-bottom: 10px;
-    padding-bottom: 10px;
+    
+    padding-top: 7px;
+    padding-bottom: 8px;
 }
 
 
